--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,11 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  /* TripTailor specific colors*/
+  --tt-light-green: #bbcfc9;
+  --tt-dark-green: #0a2c37;
+  --tt-green: #007a75;
 }
 
 /* semantic color variables for this project */
@@ -35,7 +40,7 @@
 
   --section-gap: 160px;
 }
-
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
@@ -49,7 +54,7 @@
     --color-text: var(--vt-c-text-dark-2);
   }
 }
-
+*/
 *,
 *::before,
 *::after {
@@ -61,7 +66,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: var(--color-background-mute);
   transition:
     color 0.5s,
     background-color 0.5s;
