--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,24 +1,9 @@
 @import './base.css';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
   font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
 }
 
 @media (min-width: 1024px) {
@@ -29,7 +14,18 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5vh 95vh;
+    justify-content: stretch;
+    padding: 0;
+    flex-grow:1;
+  }
+  .navbar-grid{
+    grid-column-start:1;
+    grid-row-start:1;
+  }
+  .frame-grid{
+    grid-column-start:1;
+    grid-row-start:2;
   }
 }
