--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,57 +1,47 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --tt-white-soft: #f8f8f8;
+  --tt-white-mute: #f2f2f2;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  --tt-black-soft: #222222;
+  --tt-black-mute: #282828;
 
-  --vt-c-indigo: #2c3e50;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --tt-divider-light: rgba(60, 60, 60, 0.29);
+  --tt-divider-dark: rgba(84, 84, 84, 0.65);
 
   /* TripTailor specific colors*/
-  --tt-light-green: #bbcfc9;
-  --tt-dark-green: #0a2c37;
-  --tt-green: #007a75;
+  --tt-gray: rgb(232, 231, 231);
+  --tt-light: #feecc2;
+  --tt-dark: #291d00;
+  --tt: #f2aa02;
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background: var(--tt-white);
+  --color-background-soft: var(--tt-white-soft);
+  --color-background-mute: var(--tt-white-mute);
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+  --color-border: var(--tt-divider-light-2);
+  --color-border-hover: var(--tt-divider-light-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-heading: var(--tt-text-light-1);
+  --color-text: var(--tt-text-light-1);
 
   --section-gap: 160px;
 }
 /*
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
+    --color-background: var(--tt-black);
+    --color-background-soft: var(--tt-black-soft);
+    --color-background-mute: var(--tt-black-mute);
 
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
+    --color-border: var(--tt-divider-dark-2);
+    --color-border-hover: var(--tt-divider-dark-1);
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --color-heading: var(--tt-text-dark-1);
+    --color-text: var(--tt-text-dark-2);
   }
 }
 */
@@ -66,7 +56,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background-mute);
+  background: var(--tt-white-soft);
   transition:
     color 0.5s,
     background-color 0.5s;
